--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,7 @@
 .homeContainer{
     min-height: 30vh;
     display: flex;
+    margin: 3rem 0;
 }
 
 .homeContainer > *{
@@ -68,7 +69,7 @@
     border: 2px solid white;
     transition: all .5s ease-in-out;
     padding: 10px 20px;
-    border-radius: 4px;
+    border-radius: 15px;
     margin-top: 1rem;
 }
 
