--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -1,10 +1,18 @@
 .categoryContainer{
     padding: 2rem;
     display: flex;
+    min-height: 100vh;
+}
+
+.categoryContainer > div:nth-of-type(2){
+    position: fixed;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(50%, -50%);
 }
 
 .categoryFlavors{
-    flex: 1 0 50%;
+    flex: 0 0 60%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -37,8 +45,4 @@
     text-align: center;
 }
 
-.quoteBox{
-    flex: 0  0 50%;
-    align-self: flex-start;
-}
 
