--- a/frontEnd/src/styles/home.css
+++ b/frontEnd/src/styles/home.css
@@ -27,6 +27,7 @@
 
 .formContainer {
     background: #f0f0f0;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.1);
     border: 1px solid #ccc;
     max-width: 400px;
     width: 100%;
