--- a/frontEnd/src/styles/contact.css
+++ b/frontEnd/src/styles/contact.css
@@ -54,3 +54,25 @@
     right: -15px;
 }
 
+@media (max-width: 1020px) {
+    .contactContainer{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .contactMessage{
+        order: -1; 
+        margin-bottom: 1rem;
+        width: 60%;
+    }
+
+    .contactUs{
+        text-decoration: underline;
+    }
+
+    .contactButton{
+        width: 100%;
+        margin-top: 1rem;
+    }
+    
+}
