Adding conditional thankyou for submitting statement

--- a/frontEnd/src/styles/contact.css
+++ b/frontEnd/src/styles/contact.css
@@ -76,3 +76,12 @@
     }
     
 }
+
+@media (max-width: 410px){
+    
+    .formContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
