--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -46,3 +46,22 @@
 }
 
 
+@media (max-width: 1190px) {
+    .categoryFlavors{
+      margin: 1rem;
+      justify-content: center;
+      margin-bottom: 2rem;
+    }
+  
+    .categoryContainer{
+      flex-direction: column;
+    }
+  
+    #flavorQuote{
+      position: relative;
+      top: 0; 
+      left: 0; 
+      transform: translate(0%, 0%);
+      margin-bottom: 2rem;
+    }
+  }
