--- a/frontEnd/src/styles/flavorscategory.css
+++ b/frontEnd/src/styles/flavorscategory.css
@@ -45,3 +45,33 @@
     left: 50%; 
     transform: translate(50%, -50%);
 }
+
+@media (max-width: 1500px) {
+  .categoryItem{
+    width: 300px;
+    height: 113px;
+  }
+
+  .categoryItem h3{
+    font-size: small;
+  }
+}
+
+@media (max-width: 1190px) {
+  .flavorsCategory{
+    margin: 1rem;
+    justify-content: center;
+  }
+
+  .displayCategoryContainer{
+    flex-direction: column;
+  }
+
+  #categoryQuote{
+    position: relative;
+    top: 0; 
+    left: 0; 
+    transform: translate(0%, 0%);
+    margin-bottom: 2rem;
+  }
+}
