--- a/frontEnd/src/styles/home.css
+++ b/frontEnd/src/styles/home.css
@@ -1,99 +1,103 @@
-.homeContainer{
-    min-height: 30vh;
-    display: flex;
-    margin: 3rem 0;
+/*CSS for the home component*/
+
+.homeContainer {
+  min-height: 30vh;
+  display: flex;
+  margin: 3rem 0;
 }
 
-.homeContainer > *{
-    padding: 1rem;
+.homeContainer > * {
+  padding: 1rem;
 }
 
-.companyMessage{
-    flex: 0 0 60%;
-    flex-direction: column;
-    display: flex;
+.companyMessage {
+  flex: 0 0 60%;
+  flex-direction: column;
+  display: flex;
 }
 
-.getQuote{
-    flex: 1;
-    display: flex;
-    justify-content: center;
+.getQuote {
+  flex: 1;
+  display: flex;
+  justify-content: center;
 }
 
-.companyMessage h2{
-    white-space: nowrap; 
-    align-self: center;
+.companyMessage h2 {
+  white-space: nowrap;
+  align-self: center;
 }
 
 .formContainer {
-    background: #f0f0f0;
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-    max-width: 400px;
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-  }
-
-  .formHeader {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-
-  .formInput {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .formDropdown {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .formTextarea {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-  .formButton{
-    background-color: var(--primary-dark-blue) !important;
-    color: white;
-    border: 2px solid white;
-    transition: all .5s ease-in-out;
-    padding: 10px 20px;
-    border-radius: 15px;
-    margin-top: 1rem;
+  background: #f0f0f0;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
 }
 
-  .formButton:hover{
-    background-color: white !important;
-    color: var(--primary-dark-blue) !important;
-    border: 2px solid var(--primary-dark-blue) !important;
-    transition: all .5s ease-in-out;
+.formHeader {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
-    #formCheckbox{
-        margin-left: 1rem;
-    }
+.formInput {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
-    @media (max-width: 1020px) {
-      .homeContainer{
-        flex-direction: column;
-      }
-      .companyMessage{
-        flex: 0 0 100%;
-        border-bottom: 2px solid rgb(204, 204, 204);
-      }
-      .getQuote{
-        flex: 0 0 100%;
-      }
-    }
+.formDropdown {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.formTextarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.formButton {
+  background-color: var(--primary-dark-blue) !important;
+  color: white;
+  border: 2px solid white;
+  transition: all .5s ease-in-out;
+  padding: 10px 20px;
+  border-radius: 15px;
+  margin-top: 1rem;
+}
+
+.formButton:hover {
+  background-color: white !important;
+  color: var(--primary-dark-blue) !important;
+  border: 2px solid var(--primary-dark-blue) !important;
+  transition: all .5s ease-in-out;
+}
+
+#formCheckbox {
+  margin-left: 1rem;
+}
+
+@media (max-width: 1020px) {
+  .homeContainer {
+      flex-direction: column;
+  }
+
+  .companyMessage {
+      flex: 0 0 100%;
+      border-bottom: 2px solid rgb(204, 204, 204);
+  }
+
+  .getQuote {
+      flex: 0 0 100%;
+  }
+}
