--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -142,6 +142,16 @@ nav li {
         border-radius: 5px;
     }
 
+    .nav-item.dropdown{
+        padding: 0;
+    }
+
+    .nav-item.dropdown > a{
+        padding: 1rem;
+        width: 100%;
+        height: 100%;
+    }
+
     .dropdown-item {
         color: rgb(255, 255, 255) !important;
     }
