--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -1,6 +1,8 @@
 /**
-*CSS for the navbar component
+*CSS for the navbar component. This css file overrides some bootstrap styles and can be refactored to be more dynamic and clean.
 */
+
+
 
 nav li {
     margin: 1.5rem;
@@ -164,20 +166,29 @@ nav li {
         background-color: rgb(99, 99, 99) !important;
     }
 
-    .dropdown-menu.show {
-        transform: translate(120px, 2px) !important;
+    /*These styles can be written better to be more dynamic but
+    due to time constraints and given that the amount of categories wont change, this will work.*/
+
+    .dropCategory >div > div{
+        transform: translate(140px, 400px) !important;
+    }
+
+    .dropCapabilities >div > div{
+        transform: translate(160px, -25px) !important;
     }
 }
 
-@media (max-width: 560px) {
+@media (max-width: 600px) {
 
     .dropdown-menu {
         position: relative !important;
         width: 100%;
     }
 
-    .dropdown-menu.show {
-        transform: translate(0px, 0px) !important;
+    .nav-item.dropdown > a{
+        padding: 1rem;
+        width: 100%;
+        height: 100%;
     }
 
     .dropdown-item {
@@ -197,4 +208,13 @@ nav li {
         height: auto;
         min-height: 100vh;
     }
+
+    .dropCategory > div > div{
+        transform: translate(0px, 0px) !important;
+    }
+
+    .dropCapabilities >div > div{
+        transform: translate(0px, 0px) !important;
+    }
+     
 }
