--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -58,6 +58,7 @@ nav li {
 }
 
 @media (max-width:992px) {
+
     .navContainer {
         display: none;
     }
@@ -74,11 +75,6 @@ nav li {
     .mobileContainer img {
         height: 80%;
         margin-left: 20px;
-    }
-
-    #logoLink {
-        display: flex;
-        align-items: center;
     }
 
     .burgerIcon {
@@ -110,7 +106,8 @@ nav li {
         top: 0;
         right: 0;
         width: 100%;
-        height: 100vh;
+        height: auto;
+        min-height: 100vh;
         background-color: #ffffff;
         z-index: 10;
         padding: 1rem;
@@ -130,12 +127,12 @@ nav li {
         padding: 1rem;
     }
 
-    .mobileNavUl>li {
+    .mobileNavUl > li {
         display: flex;
         justify-content: center;
     }
 
-    .mobileNavUl>li>* {
+    .mobileNavUl > li> * {
         margin: 2rem;
         backdrop-filter: brightness(0.8);
         padding: 1rem;
@@ -167,30 +164,15 @@ nav li {
     /*These styles can be written better to be more dynamic but
     due to time constraints and given that the amount of categories wont change, this will work.*/
 
-    .dropCategory >div > div{
-        transform: translate(140px, 400px) !important;
-    }
-
-    .dropCapabilities >div > div{
-        transform: translate(160px, -25px) !important;
-    }
-}
-
-@media (max-width: 600px) {
-
     .dropdown-menu {
         position: relative !important;
         width: 100%;
     }
 
-    .nav-item.dropdown > a{
+    .nav-item.dropdown > a {
         padding: 1rem;
         width: 100%;
         height: 100%;
-    }
-
-    nav li {
-        display: flex;
     }
 
     .openMenu nav {
@@ -202,12 +184,16 @@ nav li {
         min-height: 100vh;
     }
 
-    .dropCategory > div > div{
+    .dropCategory > div > div {
         transform: translate(0px, 0px) !important;
     }
 
-    .dropCapabilities >div > div{
+    .dropCapabilities > div > div {
         transform: translate(0px, 0px) !important;
     }
-     
+
+    #logoLink {
+        display: flex;
+        align-items: center;
+    }
 }
