--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -26,7 +26,8 @@
 }
 
 .individualFlavors {
-    display: block;
+    display: flex;
+    align-items: center;
     border: 1px solid black;
     border-radius: 10px;
     padding: .5rem
@@ -64,5 +65,11 @@
         left: 0;
         transform: translate(0%, 0%);
         margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 550px){
+    .categoryFlavors{
+        flex-direction: column;
     }
 }
