--- a/frontEnd/src/styles/flavorsCategory.css
+++ b/frontEnd/src/styles/flavorsCategory.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   flex: 0 0 60%;
+  justify-content: center;
   margin: 3rem;
 }
 
@@ -55,7 +56,7 @@
   }
 
   .categoryItem h3 {
-      font-size: small;
+      font-size: large;
   }
 }
 
