--- a/frontEnd/src/styles/flavorsCategory.css
+++ b/frontEnd/src/styles/flavorsCategory.css
@@ -43,6 +43,12 @@
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+.flavorsCategory > h1{
+  width: 100%;
+  text-align: center;
+  text-decoration: underline;
+}
+
 #categoryQuote {
   position: fixed;
   top: 50%;
