--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -20,6 +20,52 @@ nav li {
     display: flex;
 }
 
+.serverAlertIcon{
+    position: relative;
+    cursor: pointer;
+    transform: scale(1.3);
+    z-index: 10;
+}
+
+.serverAlertIcon::after{
+    content: "";
+    visibility: hidden;
+    width: 160px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: visibility 0.2s, opacity 0.2s;
+    opacity: 0;
+    font-size: small;
+}
+
+.serverAlertIcon:hover::after{
+    visibility: visible;
+    opacity: 1;
+}
+
+.red{
+    color: red;
+}
+
+.red::after{
+    content: "Server is waking up. It may take a few minutes for this to happen.";
+}
+
+.green{
+    color: green;
+}
+
+.green::after{
+    content: "Server status: Online. Data fetching complete.";
+}
+
 .navContainer {
     display: flex;
     flex-direction: row;
@@ -123,8 +169,9 @@ nav li {
     }
 
     .mobileNavUl {
-        border: 1px solid black;
+        border: 3px solid black;
         padding: 1rem;
+        border-radius: 20px;
     }
 
     .mobileNavUl > li {
@@ -195,5 +242,12 @@ nav li {
     .logoLink {
         display: flex;
         align-items: center;
+    }
+
+    #mobileAlert{
+        position: absolute;
+        right: 100px;
+        top: 27px;
+        list-style: none;
     }
 }
