Adding a link to explain more about the server implications in serverAlert

--- a/frontEnd/src/styles/serverAlert.css
+++ b/frontEnd/src/styles/serverAlert.css
@@ -40,6 +40,11 @@
     letter-spacing: 2px;
 }
 
+#renderLink{
+    color: rgb(73, 219, 255);
+    text-decoration: underline;
+}
+
 @media (max-width: 611px){
     .warning{
         padding-top: 3rem;
