--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -190,21 +190,18 @@ nav li {
         padding: 0;
     }
 
-    .nav-item.dropdown > a{
-        padding: 1rem;
-        width: 100%;
-        height: 100%;
-    }
-
-    .dropdown-item {
+    .dropdown-menu > a {
         color: rgb(255, 255, 255) !important;
+        display: inline-block;
+        width: 100%;
+        padding: .3rem;
     }
 
     .dropdown-menu {
         background-color: rgb(10, 10, 10) !important;
     }
 
-    .dropdown-item:hover {
+    .dropdown-menu > a:hover {
         background-color: rgb(99, 99, 99) !important;
     }
 
