--- a/frontEnd/src/styles/navbar.css
+++ b/frontEnd/src/styles/navbar.css
@@ -7,6 +7,11 @@ nav li {
     position: relative;
 }
 
+.dropdown-menu > a{
+    display: inline-block;
+    width: 100%;
+}
+
 .navContainer img {
     height: 100%;
     margin-left: 20px;
