Adding aria label for back link on flavors page

--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -82,7 +82,10 @@
 @media (max-width: 550px){
     .categoryFlavors{
         flex-direction: column;
+        justify-content: flex-start;
     }
+
+
 
     .backArrow{
         top: 100px;
