Adding new page for reviews

--- a/frontEnd/src/styles/homeCarousel.css
+++ b/frontEnd/src/styles/homeCarousel.css
@@ -29,6 +29,13 @@
     padding: 2rem;
 }
 
+.carousel{
+    width: 100%;
+    height: auto;
+    aspect-ratio: 20/7;
+}
+
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -41,33 +48,6 @@
 
 /* Media Queries on carousel for improved CLS in navigation */
 
-@media (min-width:1500px){
-    .carousel {
-        min-height: 55vh;
-        border-radius: 20px;
-    }
-}
-
-@media (max-width:1500px){
-    .carousel {
-        min-height: 30vh;
-        border-radius: 20px;
-    }
-}
-
-@media (max-width:1000px){
-    .carousel {
-        min-height: 30vh;
-        border-radius: 20px;
-    }
-}
-
-@media (max-width:750px){
-    .carousel {
-        min-height: 20vh;
-        border-radius: 20px;
-    }
-}
 @media (max-width: 630px) {
     .sliderLinks > p,
     .sliderLinks > h3 {
@@ -78,10 +58,5 @@
     .carousel-control-next, .carousel-control-prev {
         width: 30% !important;
         transform: scale(.5);
-    }
-
-    .carousel {
-        min-height: 10vh;
-        border-radius: 20px;
     }
 }
