--- a/frontEnd/src/styles/reviews.css
+++ b/frontEnd/src/styles/reviews.css
@@ -29,10 +29,10 @@
 .review-stripe::after {
     content: '';
     position: absolute;
-    bottom: -135px;
+    bottom: -125px;
     left: 0;
     width: 100%;
-    height: 135px;
+    height: 125px;
     background-color: #ffffff; 
     transform: skewY(-5deg); 
     transform-origin: 0;
@@ -41,9 +41,9 @@
 .review-stripe{
     position: relative;
     background-color: #326295;
-    height: 150px; 
+    height: 100px; 
     width: calc(100% + 4rem);
-    margin: 15rem -2rem 135px;
+    margin: 10rem -2rem 135px;
 }
 
 .reviews-heading > *{
@@ -76,10 +76,14 @@
 }
 
 .stars{
-    height: 300px;
-    width: 400px;
-    outline: 1px solid black;
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.star-container{
+    display: flex;
+    justify-content: space-around;
 }
 
 .add-review{
@@ -101,6 +105,48 @@
 
 .review-headers{
     text-align: center;
+}
+
+.sort-by{
+    margin: 0 .95rem;
+    display: flex;
+    align-items: center;
+}
+
+.sort-by > *{
+    flex: 0 0 50%;
+}
+
+.form-bootstrap{
+    min-height: 150px;
+    max-width: 47%
+}
+
+#glow-button{
+    background-color: var(--primary-dark-blue);
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 36px;
+    border: none;
+    cursor: pointer;
+    border-radius: 15px;
+    animation: glow 3s infinite;
+    margin-top: 3rem;
+}
+
+@keyframes glow {
+    0% {
+        background-color: #326295;
+        box-shadow: 0 0 25px 3px #326295;
+    }
+    50% {
+        background-color: #407fc1;
+        box-shadow: 0 0 15px 3px #407fc1;
+    }
+    100% {
+        background-color: #326295;
+        box-shadow: 0 0 25px 3px #326295;
+    }
 }
 
 @media (min-width: 1400px) {
