--- a/frontEnd/src/styles/flavors.css
+++ b/frontEnd/src/styles/flavors.css
@@ -8,7 +8,7 @@
 .categoryContainer > div:nth-of-type(2) {
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 48%;
     transform: translate(50%, -50%);
 }
 
@@ -59,6 +59,15 @@
     padding: .1rem;
 }
 
+@media (min-width: 1600px) {
+    .categoryContainer > div:nth-of-type(2) {
+        position: fixed;
+        top: 50%;
+        left: 60%;
+        transform: translate(50%, -50%);
+    }
+}
+
 @media (max-width: 1190px) {
     .categoryFlavors {
         margin: 1rem;
@@ -79,7 +88,7 @@
     }
 }
 
-@media (max-width: 550px){
+@media (max-width: 650px){
     .categoryFlavors{
         flex-direction: column;
         justify-content: flex-start;
