--- a/frontEnd/src/styles/flavorsCategory.css
+++ b/frontEnd/src/styles/flavorsCategory.css
@@ -49,10 +49,7 @@
 }
 
 #categoryQuote {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(50%, -50%);
+  align-self: center;
 }
 
 @media (max-width: 1500px) {
