--- a/frontEnd/src/styles/reviewModal.css
+++ b/frontEnd/src/styles/reviewModal.css
@@ -68,11 +68,14 @@
     padding: 1rem;
     font-size: 20px;
     border-radius: 10px;
+    visibility: hidden;
     opacity: 0;
-    transition: .5s ease-in-out;
+    transition: visibility 0.2s, opacity 0.2s;
+    text-align: center;
 }
 
 .icon-warning:hover::after{
+    visibility: visible;
     opacity: 1;
     z-index: 99;
 }
@@ -82,7 +85,8 @@
 }
 
 .review-button{
-    padding: 1.3rem;
+    padding: 1.5rem;
+    font-size: 30px;
 }
 
 #drop1{
@@ -104,7 +108,7 @@
 #warning-modal{
     position: absolute;
     left: -40px;
-    top: 4px;
+    top: 7px;
     transform: scale(1.3);
 }
 
@@ -127,3 +131,24 @@
     }
   }
   
+@media (max-width: 800px) {
+    .rater{
+        flex-direction: column;
+        gap: .5rem;
+    }
+}
+
+@media (max-width: 650px){
+    .review-form > h1{
+        margin-top: 2rem;
+    }
+
+    .divider{
+        margin: .75rem;
+    }
+
+    .review-button{
+        padding: .5rem
+        ;
+    }
+}
