--- a/frontEnd/src/styles/reviewModal.css
+++ b/frontEnd/src/styles/reviewModal.css
@@ -33,7 +33,7 @@
 .review-form > h1{
     text-align: center;
     width: 100%;
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
 .review-form > h2{
@@ -108,7 +108,7 @@
 #warning-modal{
     position: absolute;
     left: -40px;
-    top: 7px;
+    top: 2px;
     transform: scale(1.3);
 }
 
@@ -136,19 +136,35 @@
         flex-direction: column;
         gap: .5rem;
     }
+
+    .review-form > h1 {
+        font-size: 20px;
+    }
+
+    .rater > *{
+        font-size: 18px;
+    }
+
+    .review-form > h2{
+        font-size:20px;
+        margin-bottom: .75rem;
+    }
+
+    .divider{
+        margin: .75rem
+    }
+    
 }
 
 @media (max-width: 650px){
-    .review-form > h1{
-        margin-top: 2rem;
-    }
-
     .divider{
         margin: .75rem;
     }
 
     .review-button{
-        padding: .5rem;
+        padding: .35rem;
+        margin: .25rem;
+        font-size: 22px;
     }
 
     .icon-warning::after{
@@ -161,12 +177,12 @@
 
 @media (max-width:470px){
     #warning-modal{
-        top: -273px;
+        top: -250px;
         left: 15px;
     }
 
     .icon-warning::after{
-        top: -241px;
+        top: -221px;
         left: 5px;
     }
 }
