--- a/frontEnd/src/styles/reviews.css
+++ b/frontEnd/src/styles/reviews.css
@@ -98,11 +98,11 @@
     font-size: 20px;
     position: fixed;
     top: 88%;
-    left: 50%;
+    left: 80%;
     transform: translate(-50%, -50%);
     z-index: 99;
-    width: 200px;
-    height: 75px;
+    width: 175px;
+    height: 50px;
     color: white;
 }
 
@@ -214,6 +214,10 @@
         order: -1;
         width: 80%;
         margin: 2rem;
+    }
+
+    .add-review{
+        left: 50%;
     }
 }
 
