Simulated responsiveness differs in practice, bug fix

--- a/frontEnd/src/styles/reviews.css
+++ b/frontEnd/src/styles/reviews.css
@@ -225,6 +225,10 @@
     #glow-button{
         font-size: 23px;
     }
+
+    .review-form{
+        overflow-y: scroll;
+    }
 }
 
 @media (max-width: 515px){
